# datacatalogtordf

./: .flake8  .gitignore  .readthedocs.yml  Pipfile  README.md  TODO.md  mypy.ini  noxfile.py  pyproject.toml  requirements.txt  setup.py
.github/: release-drafter.yml
.github/workflows/: audit.yaml  constraints.txt  coverage.yml  release-drafter.yml  release.yml  test-pypi.yml  tests.yml
datacatalogtordf/: __init__.py  catalog.py  dataservice.py  dataset.py  distribution.py  resource.py
docs/: conf.py  index.rst  reference.rst  requirements.txt
examples/: catalog.py
src/datacatalogtordf/: __init__.py  agent.py  catalog.py  catalogrecord.py  contact.py  dataservice.py  dataset.py  dataset_series.py  distribution.py  document.py  exceptions.py  location.py  periodoftime.py  relationship.py  resource.py  skolemizer.py  uri.py
tests/: __init__.py  skolemizer_testutils.py  test_agent.py  test_catalog.py  test_catalogrecord.py  test_contact.py  test_dataservice.py  test_dataset.py  test_dataset_series.py  test_distribution.py  test_document.py  test_location.py  test_periodoftime.py  test_relationship.py  test_resource.py  test_skolemizer.py  test_uri.py  testutils.py
