[project]
name = "datacatalogtordf"
version = "3.0.0"
description = "A library for mapping a data catalog to rdf"
readme = "README.md"
requires-python = ">=3.8,<3.14"
authors = [
    { name = "Jeff Reiffers", email = "jeffreiffers@gmail.com" },
    { name = "Stig B. Dørmænen", email = "stigbd@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
dependencies = ["rdflib>=6.3.2", "skolemizer>=1.1.0"]

[project.urls]
Homepage = "https://github.com/Informasjonsforvaltning/datacatalogtordf"
Documentation = "https://datacatalogtordf.readthedocs.io"
Repository = "https://github.com/Informasjonsforvaltning/datacatalogtordf"
Issues = "https://github.com/Informasjonsforvaltning/datacatalogtordf/issues"

[dependency-groups]
dev = [
    "deptry>=0.20.0",
    "pip-audit>=2.7.3",
    "poethepoet>=0.30.0",
    "pyright>=1.1.393",
    "pytest>=8.3.4",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.4",
    "sphinx>=7.1.2",
    "sphinx-autodoc-typehints>=2.0.1",
    "xdoctest>=1.2.0",
]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = false
source = ["datacatalogtordf"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.deptry]
extend_exclude = ["examples"]

[tool.poe.tasks]
format = "uv run ruff format"
lint = "uv run ruff check --fix"
pyright = "uv run pyright"
check-deps = "uv run deptry ."
audit = "uv run pip-audit"
test = [
    { cmd = "uv run --python 3.8 pytest -s --cov --cov-report=term-missing --cov-report=html" },
    { cmd = "uv run --python 3.9 pytest -s --cov --cov-report=term-missing --cov-report=html" },
    { cmd = "uv run --python 3.10 pytest -s --cov --cov-report=term-missing --cov-report=html" },
    { cmd = "uv run --python 3.11 pytest -s --cov --cov-report=term-missing --cov-report=html" },
    { cmd = "uv run --python 3.12 pytest -s --cov --cov-report=term-missing --cov-report=html" },
    { cmd = "uv run --python 3.13 pytest -s --cov --cov-report=term-missing --cov-report=html" },
]
xdoctest = "uv run xdoctest datacatalogtordf"
build_docs = "uv run sphinx-build docs docs/_build"
release = ["lint", "pyright", "check-deps", "audit", "test", "xdoctest"]
