[tool.poetry]
authors = [
  "Stig B. Dørmænen <stigbd@gmail.com>",
  "Jeff Reiffers <jeffreiffers@gmail.com>"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
description = "A library for mapping a data catalog to rdf"
documentation = "https://datacatalogtordf.readthedocs.io"
homepage = "https://github.com/Informasjonsforvaltning/datacatalogtordf"
license = "Apache-2.0"
name = "datacatalogtordf"
readme = "README.md"
repository = "https://github.com/Informasjonsforvaltning/datacatalogtordf"
version = "4.0.0"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
rdflib = "^7.0.0"
skolemizer = "^1.1.0"

[tool.poetry.dev-dependencies]
Sphinx = "^7.2.6"
bandit = "^1.7.5"
black = ">=24.3.0"
codecov = "^2.1.13"
coverage = "^7.4.0"
darglint = "^1.8.1"
flake8 = "^7.0.0"
flake8-annotations = "^2.9.1"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^24.12.12"
flake8-docstrings = "^1.7.0"
flake8-import-order = "^0.18.2"
mypy = "^1.8.0"
nox = "^2023.4.22"
nox-poetry = "^1.0.0"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytype = "^2023.12.7"
safety = "<2.4.0"
sphinx-autodoc-typehints = "^1.25.3"
xdoctest = "^1.1.2"
sphinxcontrib-napoleon = "^0.7"





[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = false
source = ["datacatalogtordf"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.mypy]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = false
warn_unreachable = true
implicit_reexport = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "concepttordf.*",
  "skolemizer.*",
  "pytest_mock.*",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
