[tool.poetry]
authors = [
  "Stig B. Dørmænen <stigbd@gmail.com>",
  "Jeff Reiffers <jeffreiffers@gmail.com>"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
description = "A library for mapping a data catalog to rdf"
documentation = "https://datacatalogtordf.readthedocs.io"
homepage = "https://github.com/Informasjonsforvaltning/datacatalogtordf"
license = "Apache-2.0"
name = "datacatalogtordf"
readme = "README.md"
repository = "https://github.com/Informasjonsforvaltning/datacatalogtordf"
version = "4.1.0"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
rdflib = "^7.6.0"
skolemizer = "^2.1.0"

[tool.poetry.group.dev.dependencies]
Sphinx = "^9.1.0"
bandit = "^1.9.4"
black = ">=26.3.1"
codecov = "^2.1.13"
coverage = "^7.13.5"
darglint = "^1.8.1"
flake8 = "^7.3.0"
flake8-annotations = "^3.2.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.4.0"
flake8-bugbear = "^25.11.29"
flake8-docstrings = "^1.7.0"
flake8-import-order = "^0.19.2"
mypy = "^1.20.0"
nox = "^2026.2.9"
nox-poetry = "^1.2.0"
pytest = "^9.0.2"
pytest-cov = "^7.1.0"
pytest-mock = "^3.15.1"
pytype = "^2024.10.11"
safety = "^3.7.0"
sphinx-autodoc-typehints = "^3.9.11"
xdoctest = "^1.3.2"
sphinxcontrib-napoleon = "^0.7"





[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = false
source = ["datacatalogtordf"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.mypy]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = false
warn_unreachable = true
implicit_reexport = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "concepttordf.*",
  "skolemizer.*",
  "pytest_mock.*",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
